[gd_scene load_steps=9 format=3 uid="uid://teleport_gate_dimensions_test"]

[ext_resource type="Script" path="res://examples/TeleportGateDimensionsSetup.gd" id="1_setup_script"]
[ext_resource type="PackedScene" uid="uid://b8x7y6z5w4v3u" path="res://actors/Player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://3l4c2ub6a411" path="res://ui/GameUI.tscn" id="3_gameui"]
[ext_resource type="PackedScene" uid="uid://bx0yw8rkqh4nn" path="res://actors/TeleportGate.tscn" id="4_teleport_gate"]
[ext_resource type="PackedScene" uid="uid://bkqxvn2n8wqr" path="res://actors/DimensionSwitch.tscn" id="5_dimension_switch"]
[ext_resource type="PackedScene" uid="uid://bvq8x7y2n8wqr" path="res://actors/HintArea.tscn" id="6_hint_area"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(800, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(100, 100)

[node name="Level_TeleportGate_Dimensions" type="Node2D"]
script = ExtResource("1_setup_script")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(640, 650)
collision_layer = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_1")

[node name="ColorRect" type="ColorRect" parent="Ground"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -25.0
offset_right = 400.0
offset_bottom = 25.0
color = Color(0.4, 0.2, 0.1, 1)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(200, 500)

[node name="GameUI" parent="." instance=ExtResource("2_gameui")]

[node name="DimensionSwitch" parent="." instance=ExtResource("4_dimension_switch")]
position = Vector2(640, 580)

[node name="TeleportGateA1" parent="." instance=ExtResource("3_teleport_gate")]
position = Vector2(300, 580)
target_layer = "A"

[node name="TeleportGateA2" parent="." instance=ExtResource("3_teleport_gate")]
position = Vector2(1000, 580)
target_layer = "A"

[node name="TeleportGateB1" parent="." instance=ExtResource("3_teleport_gate")]
position = Vector2(400, 580)
target_layer = "B"

[node name="TeleportGateB2" parent="." instance=ExtResource("3_teleport_gate")]
position = Vector2(900, 580)
target_layer = "B"

[node name="TeleportGateBoth1" parent="." instance=ExtResource("3_teleport_gate")]
position = Vector2(500, 580)
target_layer = "Both"

[node name="TeleportGateBoth2" parent="." instance=ExtResource("3_teleport_gate")]
position = Vector2(800, 580)
target_layer = "Both"

[node name="PlatformA" type="StaticBody2D" parent="."]
position = Vector2(300, 520)
collision_layer = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformA"]
shape = SubResource("RectangleShape2D_2")

[node name="ColorRect" type="ColorRect" parent="PlatformA"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.2, 0.6, 1, 0.7)

[node name="Label" type="Label" parent="PlatformA"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlatformB" type="StaticBody2D" parent="."]
position = Vector2(400, 520)
collision_layer = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformB"]
shape = SubResource("RectangleShape2D_2")

[node name="ColorRect" type="ColorRect" parent="PlatformB"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
color = Color(1, 0.4, 0.6, 0.7)

[node name="Label" type="Label" parent="PlatformB"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
text = "B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlatformBoth" type="StaticBody2D" parent="."]
position = Vector2(500, 520)
collision_layer = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformBoth"]
shape = SubResource("RectangleShape2D_2")

[node name="ColorRect" type="ColorRect" parent="PlatformBoth"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.8, 0.6, 1, 0.7)

[node name="Label" type="Label" parent="PlatformBoth"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
text = "A+B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionsHint" parent="." instance=ExtResource("5_hint_area")]
position = Vector2(200, 450)
hint_message = "Welcome to the Dimension Teleport Gates demo! Walk into the gates to teleport. Press F near the switch to change dimensions and see how different gates become active."
hint_title = "Instructions"
target_layer = "Both"

[node name="DimensionAHint" parent="." instance=ExtResource("5_hint_area")]
position = Vector2(300, 450)
hint_message = "Dimension A gates are active! The cyan gates will teleport you between the A platforms."
hint_title = "Dimension A Active"
target_layer = "A"

[node name="DimensionBHint" parent="." instance=ExtResource("5_hint_area")]
position = Vector2(400, 450)
hint_message = "Dimension B gates are active! The cyan gates will teleport you between the B platforms."
hint_title = "Dimension B Active"
target_layer = "B"

[node name="BothGatesHint" parent="." instance=ExtResource("5_hint_area")]
position = Vector2(500, 450)
hint_message = "These purple gates work in BOTH dimensions! They're always active regardless of which dimension you're in."
hint_title = "Universal Gates"
target_layer = "Both"